<resources>
    <!--    <string name="app_name">FoodApp_Java</string>-->
    <string name="app_name">SA Food App</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">LogOut</string>
    <string name="select_category">Select category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- res/values/strings.xml -->
    <string name="news_api_key">16f57f8d0e444696863da47a233e651b</string>
</resources>